[gd_scene load_steps=8 format=3 uid="uid://b37ybl4dhruab"]

[ext_resource type="Texture2D" uid="uid://bx0j0pep6f8vq" path="res://assets/textures/commit_button.png" id="1_nis2w"]
[ext_resource type="Script" uid="uid://byhdwxknyf5ec" path="res://scenes/ui_objects/move_gui.gd" id="1_odjpo"]
[ext_resource type="Texture2D" uid="uid://cp0ndaivlnfr8" path="res://assets/textures/commit_button_disabled.png" id="2_d4bs0"]
[ext_resource type="Texture2D" uid="uid://5mk8uq4jwe0v" path="res://assets/textures/cancel_button.png" id="3_d4bs0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_odjpo"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.1, 0.1, 0.1, 0.6)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_78hkx"]
bg_color = Color(0.8, 0.62352943, 0.39215687, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.427451, 0.0313726, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n6jid"]
content_margin_left = 40.0
content_margin_top = 10.0
content_margin_right = 40.0
content_margin_bottom = 10.0
bg_color = Color(0.427451, 0.0313726, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="MoveGui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_odjpo")

[node name="BackgroundButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/disabled = SubResource("StyleBoxFlat_odjpo")
disabled = true

[node name="GuiContainer" type="Control" parent="."]
custom_minimum_size = Vector2(1000, 775)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="Panel" parent="GuiContainer"]
custom_minimum_size = Vector2(1000, 775)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -387.5
offset_right = 500.0
offset_bottom = 387.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_78hkx")

[node name="PreviewContainer" type="Control" parent="GuiContainer/PanelContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(450, 630)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -475.0
offset_top = -350.0
offset_right = -25.0
offset_bottom = 280.0
grow_horizontal = 0
grow_vertical = 2

[node name="ButtonContainer" type="VBoxContainer" parent="GuiContainer/PanelContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 1
offset_left = 25.0
offset_top = 45.0
offset_right = 125.0
offset_bottom = 85.0

[node name="TitlePanel" type="PanelContainer" parent="GuiContainer"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -162.0
offset_top = -64.0
offset_right = 162.0
offset_bottom = 10.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_n6jid")

[node name="TitleLabel" type="Label" parent="GuiContainer/TitlePanel"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "MOVE CHARACTER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CommitButton" type="TextureButton" parent="GuiContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 150)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 100.0
offset_top = -75.0
offset_right = 250.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 0
texture_normal = ExtResource("1_nis2w")
texture_disabled = ExtResource("2_d4bs0")
ignore_texture_size = true
stretch_mode = 4

[node name="CancelButton" type="TextureButton" parent="GuiContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 150)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -75.0
offset_right = -100.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 0
texture_normal = ExtResource("3_d4bs0")
ignore_texture_size = true
stretch_mode = 4

[connection signal="pressed" from="GuiContainer/CommitButton" to="." method="_on_commit_pressed"]
[connection signal="pressed" from="GuiContainer/CancelButton" to="." method="_on_cancel_pressed"]
